--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,6 @@
       <h1 class="display-5 main-message">Welcome to Cover</h1>
     </div>
     <div class="text-center start-button">
-    <a href="" class="btn btn-info" role="button" data-toggle="modal" data-target="#myModal"><strong> Getting started</strong> </a>
+    <a href="" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myModal"><strong> Getting started</strong> </a>
   </div>
 </body>
