--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -28,13 +28,17 @@
               <li><a href="/users/<%= current_user.id %>/applications"> Applications </a></li>
               <% end %>
               <li><a href="/logout">Logout</a></li>
-            
+
             </ul>
         </ul>
       <% else %>
-       <ul class="nav navbar-nav navbar-right">
-         <a href="" class="btn btn-info" role="button" data-toggle="modal" data-target="#myModal"><strong> Sign up</strong>
-          <%= link_to 'Login', '/login', class: "btn btn-info" %>
+       <div class="nav navbar-nav navbar-right">
+          <a href="" class="btn btn-primary btn-xs signup" role="button" data-toggle="modal" data-target="#myModal">
+          <strong> Sign up</strong>
+          </a>
+
+          <%= link_to 'Login', '/login', class: "btn btn-primary btn-xs login" %>
+        </div>
       <% end %>
     </div>
   </div>
@@ -47,8 +51,8 @@
         <h4 class="modal-title">Register as:</h4>
       </div>
       <div class="modal-body">
-        <a href = "/users/worker" class="btn btn-info" role="button">Worker</a> or
-        <a href = "/users/restaurant" class="btn btn-info" role="button">Restaurant Owner</a>
+        <a href = "/users/worker" class="btn btn-primary worker" role="button">Worker</a> or
+        <a href = "/users/restaurant" class="btn btn-primary restaurant" role="button">Restaurant Owner</a>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
