--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -7,7 +7,7 @@
 
             </div>
             <div class="avatar">
-              <img alt="" src="http://lorempixel.com/100/100/people/9/">
+              <img alt="" src="http://lorempixel.com/100/100/people">
             </div>
 
             <div class="info">
