--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,131 +1,120 @@
-<<<<<<< HEAD
-=======
 
->>>>>>> master
 <div class="container">
   <div class="row">
     <div class="col-md-7 ">
       <div class="panel panel-default">
         <div class="panel-heading">
-<<<<<<< HEAD
-          <h4 >Profile</h4>
-=======
           <h4>Profile</h4>
->>>>>>> master
         </div>
         <div class="panel-body">
           <div class="box box-info">
             <div class="box-body">
-<<<<<<< HEAD
-
               <div class="col-sm-6">
-                <div  align="center"> <img alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" id="profile-image1" class="img-circle img-responsive">
+                <div align="center">
+                  <img alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" id="profile-image1" class="img-circle img-responsive">
                 </div>
                 <br>
               </div>
-
-
               <div>
                 <h4 class="col-sm-6" style="color:#00b1b1;"><%= @user.first_name %> <%= @user.last_name %></h4>
               </div>
-
               <div class="clearfix"></div>
               <hr style="margin:5px 0 5px 0;">
-              <div class="col-sm-5 col-xs-6 tital" >Restaurant:
+              <div class="col-sm-5 col-xs-6 title">Restaurant:
               </div>
               <div class="col-sm-7 "><%= @user.restaurant_name %>
               </div>
 
-              <div class="col-sm-5 col-xs-6 tital" >First Name:
+              <div class="col-sm-5 col-xs-6 title">First Name:
               </div>
               <div class="col-sm-7"><%= @user.first_name %>
               </div>
 
-              <div class="col-sm-5 col-xs-6 tital " >Last Name:
+              <div class="col-sm-5 col-xs-6 title ">Last Name:
               </div>
               <div class="col-sm-7"><%= @user.last_name %>
               </div>
 
-              <div class="col-sm-5 col-xs-6 tital " >Cell Phone:
+              <div class="col-sm-5 col-xs-6 title ">Cell Phone:
               </div>
               <div class="col-sm-7"><%= @user.cell %><br>
               </div>
 
-              <div class="col-sm-5 col-xs-6 tital " >Email:
+              <div class="col-sm-5 col-xs-6 title ">Email:
               </div>
               <div class="col-sm-7"><%= @user.email %><br>
               </div>
 
-              <div class="col-sm-5 col-xs-6 tital " >City:
+              <div class="col-sm-5 col-xs-6 title ">City:
               </div>
               <div class="col-sm-7"><%= @user.city %><br>
               </div>
 
-              <div class="col-sm-5 col-xs-6 tital " >Street address:
+              <div class="col-sm-5 col-xs-6 title ">Street address:
               </div>
               <div class="col-sm-7"><%= @user.street_address %><br>
               </div>
 
-              <div class="col-sm-5 col-xs-6 tital " >Province:
+              <div class="col-sm-5 col-xs-6 title ">Province:
               </div>
               <div class="col-sm-7"><%= @user.province %><br>
               </div>
 
-              <div class="col-sm-5 col-xs-6 tital " >Postal code:
+              <div class="col-sm-5 col-xs-6 title ">Postal code:
               </div>
               <div class="col-sm-7"><%= @user.postal_code %><br><br>
               </div>
             </div>
           </div>
 
-        <% if current_user %>
-          <%= form_for [@user, @review] do |f| %>
-            <% if f.object.errors.any? %>
-              <div class="alert alert-danger">
-                <strong>The following errors prevented saving:</strong>
-                <ul>
-                  <% f.object.errors.full_messages.each do |error| %>
-                <li><%= error %></li>
+          <% if current_user %>
+              <%= form_for [@review] do |f| %>
+                  <% if f.object.errors.any? %>
+                      <div class="alert alert-danger">
+                        <strong>The following errors prevented saving:</strong>
+                        <ul>
+                          <% f.object.errors.full_messages.each do |error| %>
+                              <li><%= error %></li>
+                          <% end %>
+                        </ul>
+                      </div>
                   <% end %>
-                </ul>
-              </div>
-            <% end %>
-            <div class="field">
-              <div> Please add a comment and rate this product </div>
-              <%= f.text_area :comment %>
-              <%= f.select :rating, 1..5 %>
-            </div>
-            <div class="actions">
-              <%= f.submit %>
-            </div>
+                  <div class="field">
+                    <div> Please add a comment and rate this product</div>
+                    <%= f.text_area :comment %>
+                    <%= f.select :rating, 1..5 %>
+                  </div>
+                  <div class="actions">
+                    <%= f.submit %>
+                  </div>
+              <% end %>
           <% end %>
-        <% end %>
 
-        <br>
+          <br>
 
-        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-        See review
-        </button>
-        <div class="collapse" id="collapseExample">
-          <div class="well">
-            <table class="table">
-              <caption><h4>Reviews</h4></caption>
-              <thead>
+          <!-- Shows or hides the reviews -->
+          <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            See review
+          </button>
+          <div class="collapse" id="collapseExample">
+            <div class="well">
+              <table class="table">
+                <caption><h4>Reviews</h4></caption>
+                <thead>
                 <th>Rating</th>
                 <th>Content</th>
                 <th>User</th>
-              </thead>
-              <tbody>
+                </thead>
+                <tbody>
                 <% @user.reviews_by.reverse_each do |item| %>
-                  <tr>
-                    <td><%= item.rating %></td>
-                    <td><%= item.comment %></td>
-                    <td><%= item.user.first_name %> <%= item.user.last_name %></td>
-                  </tr>
+                    <tr>
+                      <td><%= item.rating %></td>
+                      <td><%= item.comment %></td>
+                      <td><%= item.user.first_name %> <%= item.user.last_name %></td>
+                    </tr>
                 <% end %>
-              </tbody>
-            </table>
-=======
+                </tbody>
+              </table>
               <div class="col-sm-6">
                 <div align="center">
                   <img alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" id="profile-image1" class="img-circle img-responsive">
@@ -133,21 +122,21 @@
                 <br>
               </div>
               <div class="col-sm-6">
-                <h4 style="color:#00b1b1;"><%= @user.first_name %> <%= @user.last_name %></h4></span>
+                <h4 style="color:#00b1b1;"><%= @user.first_name %> <%= @user.last_name %></h4>
               </div>
               <div class="clearfix">
               </div>
               <hr style="margin:5px 0 5px 0;">
 
               <% if current_user.usertype_id == 1 %>
-              <div class="col-sm-5 col-xs-6 title ">Restaurant:
-              </div>
-              <div class="col-sm-7"><%= @user.restaurant_name %>
-              </div>
-              <div class="clearfix">
-              </div>
-              <div class="bot-border">
-              </div>
+                  <div class="col-sm-5 col-xs-6 title ">Restaurant:
+                  </div>
+                  <div class="col-sm-7"><%= @user.restaurant_name %>
+                  </div>
+                  <div class="clearfix">
+                  </div>
+                  <div class="bot-border">
+                  </div>
               <% end %>
               <div class="col-sm-5 col-xs-5 title ">First Name:
               </div>
@@ -183,29 +172,30 @@
               </div>
               <div class="col-sm-5 col-xs-5 title ">City:
               </div>
+
               <% if current_user.usertype_id == 1 %>
-              <div class="col-sm-7"><%= @user.city %><br>
-              </div>
-              <div class="clearfix">
-              </div>
-              <div class="col-sm-5 col-xs-5 title ">Street address:
-              </div>
-              <div class="col-sm-7"><%= @user.street_address %><br>
-              </div>
-              <div class="clearfix">
-              </div>
-              <div class="bot-border">
-              </div>
-              <div class="col-sm-5 col-xs-5 title ">Province:
-              </div>
-              <div class="col-sm-7"><%= @user.province %><br>
-              </div>
-              <div class="clearfix">
-              </div>
-              <div class="bot-border">
-              </div>
-              <div class="col-sm-5 col-xs-5 title ">Postal code:
-              </div>
+                  <div class="col-sm-7"><%= @user.city %><br>
+                  </div>
+                  <div class="clearfix">
+                  </div>
+                  <div class="col-sm-5 col-xs-5 title ">Street address:
+                  </div>
+                  <div class="col-sm-7"><%= @user.street_address %><br>
+                  </div>
+                  <div class="clearfix">
+                  </div>
+                  <div class="bot-border">
+                  </div>
+                  <div class="col-sm-5 col-xs-5 title ">Province:
+                  </div>
+                  <div class="col-sm-7"><%= @user.province %><br>
+                  </div>
+                  <div class="clearfix">
+                  </div>
+                  <div class="bot-border">
+                  </div>
+                  <div class="col-sm-5 col-xs-5 title ">Postal code:
+                  </div>
               <% end %>
               <div class="col-sm-7"><%= @user.postal_code %><br>
               </div>
@@ -228,78 +218,74 @@
   });
 </script>
 
+<!-- Shows a button to 'worker' users, allowing that user to add experience -->
 <% if current_user.usertype_id == 2 %>
-<div class="container">
-  <div class="row">
-    <div class="col-md-2 ">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <%= link_to link_to "Add experience", controller: "experiences", action: "new" %>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2 ">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <%= link_to link_to "Add experience", controller: "experiences", action: "new" %>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
+
 <% end %>
 
-
+<!-- Renders each instance of 'experience' added by a 'worker' user -->
 <% @user.experiences.each do |e| %>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-7 ">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <div>
-              <h5>
-              <%= e.jobtype.name.capitalize %>
-              </h5>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-7 ">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <div>
+                <h5>
+                  <%= e.jobtype.name.capitalize %>
+                </h5>
+              </div>
             </div>
-          </div>
-          <div class="panel-body">
-            <div class="box box-info">
-              <div class="box-body">
-                <div class="col-sm-14">
-                  <div align="center">
-                    <div class="col-sm-5 col-xs-6 title ">Employer:
-                    </div>
-                    <div class="col-xs-5 col-sm-7"><%= e.employer_name %>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                    <div class="bot-border">
-                    </div>
-                    <div class="col-sm-5 col-xs-6 title ">Month(s):
-                    </div>
-                    <div class="col-sm-7"><%= e.months %>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                    <div class="bot-border">
-                    </div>
-                    <div class="col-sm-5 col-xs-6 title ">Description:
-                    </div>
-                    <div class="col-sm-7"><%= e.description %>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                    <div class="bot-border">
+            <div class="panel-body">
+              <div class="box box-info">
+                <div class="box-body">
+                  <div class="col-sm-14">
+                    <div align="center">
+                      <div class="col-sm-5 col-xs-6 title ">Employer:
+                      </div>
+                      <div class="col-xs-5 col-sm-7"><%= e.employer_name %>
+                      </div>
+                      <div class="clearfix">
+                      </div>
+                      <div class="bot-border">
+                      </div>
+                      <div class="col-sm-5 col-xs-6 title ">Month(s):
+                      </div>
+                      <div class="col-sm-7"><%= e.months %>
+                      </div>
+                      <div class="clearfix">
+                      </div>
+                      <div class="bot-border">
+                      </div>
+                      <div class="col-sm-5 col-xs-6 title ">Description:
+                      </div>
+                      <div class="col-sm-7"><%= e.description %>
+                      </div>
+                      <div class="clearfix">
+                      </div>
+                      <div class="bot-border">
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
->>>>>>> master
           </div>
         </div>
       </div>
     </div>
-  </div>
-<<<<<<< HEAD
-</div>
 
-
-
-=======
 <% end %>
->>>>>>> master
-
