--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,291 +1,116 @@
-
 <div class="container">
-  <div class="row">
-    <div class="col-md-7 ">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4>Profile</h4>
-        </div>
-        <div class="panel-body">
-          <div class="box box-info">
-            <div class="box-body">
-              <div class="col-sm-6">
-                <div align="center">
-                  <img alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" id="profile-image1" class="img-circle img-responsive">
-                </div>
-                <br>
-              </div>
-              <div>
-                <h4 class="col-sm-6" style="color:#00b1b1;"><%= @user.first_name %> <%= @user.last_name %></h4>
-              </div>
-              <div class="clearfix"></div>
-              <hr style="margin:5px 0 5px 0;">
-              <div class="col-sm-5 col-xs-6 title">Restaurant:
-              </div>
-              <div class="col-sm-7 "><%= @user.restaurant_name %>
-              </div>
+  <div class="panel panel-default">
 
-              <div class="col-sm-5 col-xs-6 title">First Name:
-              </div>
-              <div class="col-sm-7"><%= @user.first_name %>
-              </div>
+    <div class="panel-heading">
+      <h4><%= @user.first_name %> <%= @user.last_name %></h4>
+    </div>
 
-              <div class="col-sm-5 col-xs-6 title ">Last Name:
-              </div>
-              <div class="col-sm-7"><%= @user.last_name %>
-              </div>
+    <div class="panel-body" align="center">
+      <img src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" class="img-circle img-responsive">
+    </div>
+    <table class="table">
+      <tr>
+        <td>Restaurant:</td>
+        <td><%= @user.restaurant_name %></td>
+      </tr>
+      <tr>
+        <td>Phone:</td>
+        <td><%= @user.cell %></td>
+      </tr>
+      <tr>
+        <td>
+          Email:
+        </td>
+        <td>
+          <%= @user.email %><br>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Address:
+        </td>
+        <td>
+          <%= @user.street_address %><br>
+          <%= @user.city %>,&nbsp<%= @user.province %><br>
+          <%= @user.postal_code %>
+        </td>
+      </tr>
+    </table>
 
-              <div class="col-sm-5 col-xs-6 title ">Cell Phone:
-              </div>
-              <div class="col-sm-7"><%= @user.cell %><br>
-              </div>
+    <hr>
 
-              <div class="col-sm-5 col-xs-6 title ">Email:
-              </div>
-              <div class="col-sm-7"><%= @user.email %><br>
-              </div>
+    <!-- Displays each user 'experience' -->
+    <% %>
+    <table class="table">
+      <% @user.experiences.each do |e| %>
+          <tr>
+            <td>Employer:</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Job type:</td>
+            <td><%= e.jobtype.name %></td>
+          </tr>
+          <tr>
+            <td>Months:</td>
+            <td><%= e.months %></td>
+          </tr>
+          <tr>
+            <td>Additional description:</td>
+            <td><%= e.description %></td>
+          </tr>
+      <% end %>
+    </table>
 
-              <div class="col-sm-5 col-xs-6 title ">City:
+    <!-- Logged-in users can see form to create reviews -->
+    <% if current_user %>
+        <div class="panel-body" align="center">
+          <%= form_for [@user, @review] do |f| %>
+              <div class="field">
+                <h5>Add Rating</h5>
+                <%= f.text_area :comment %>
+                <%= f.select :rating, 1..5 %>
               </div>
-              <div class="col-sm-7"><%= @user.city %><br>
+              <div class="actions">
+                <%= f.submit %>
               </div>
-
-              <div class="col-sm-5 col-xs-6 title ">Street address:
-              </div>
-              <div class="col-sm-7"><%= @user.street_address %><br>
-              </div>
-
-              <div class="col-sm-5 col-xs-6 title ">Province:
-              </div>
-              <div class="col-sm-7"><%= @user.province %><br>
-              </div>
-
-              <div class="col-sm-5 col-xs-6 title ">Postal code:
-              </div>
-              <div class="col-sm-7"><%= @user.postal_code %><br><br>
-              </div>
-            </div>
-          </div>
-
-          <% if current_user %>
-              <%= form_for [@review] do |f| %>
-                  <% if f.object.errors.any? %>
-                      <div class="alert alert-danger">
-                        <strong>The following errors prevented saving:</strong>
-                        <ul>
-                          <% f.object.errors.full_messages.each do |error| %>
-                              <li><%= error %></li>
-                          <% end %>
-                        </ul>
-                      </div>
-                  <% end %>
-                  <div class="field">
-                    <div> Please add a comment and rate this product</div>
-                    <%= f.text_area :comment %>
-                    <%= f.select :rating, 1..5 %>
-                  </div>
-                  <div class="actions">
-                    <%= f.submit %>
-                  </div>
-              <% end %>
           <% end %>
-
-          <br>
-
-          <!-- Shows or hides the reviews -->
-          <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-            See review
-          </button>
-          <div class="collapse" id="collapseExample">
-            <div class="well">
-              <table class="table">
-                <caption><h4>Reviews</h4></caption>
-                <thead>
-                <th>Rating</th>
-                <th>Content</th>
-                <th>User</th>
-                </thead>
-                <tbody>
-                <% @user.reviews_by.reverse_each do |item| %>
-                    <tr>
-                      <td><%= item.rating %></td>
-                      <td><%= item.comment %></td>
-                      <td><%= item.user.first_name %> <%= item.user.last_name %></td>
-                    </tr>
-                <% end %>
-                </tbody>
-              </table>
-              <div class="col-sm-6">
-                <div align="center">
-                  <img alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" id="profile-image1" class="img-circle img-responsive">
-                </div>
-                <br>
-              </div>
-              <div class="col-sm-6">
-                <h4 style="color:#00b1b1;"><%= @user.first_name %> <%= @user.last_name %></h4>
-              </div>
-              <div class="clearfix">
-              </div>
-              <hr style="margin:5px 0 5px 0;">
-
-              <% if current_user.usertype_id == 1 %>
-                  <div class="col-sm-5 col-xs-6 title ">Restaurant:
-                  </div>
-                  <div class="col-sm-7"><%= @user.restaurant_name %>
-                  </div>
-                  <div class="clearfix">
-                  </div>
-                  <div class="bot-border">
-                  </div>
-              <% end %>
-              <div class="col-sm-5 col-xs-5 title ">First Name:
-              </div>
-              <div class="col-sm-7 col-xs-7"><%= @user.first_name %>
-              </div>
-              <div class="clearfix ">
-              </div>
-              <div class="bot-border">
-              </div>
-              <div class="col-sm-5 col-xs-5 title ">Last Name:
-              </div>
-              <div class="col-sm-7"><%= @user.last_name %>
-              </div>
-              <div class="clearfix">
-              </div>
-              <div class="bot-border">
-              </div>
-              <div class="col-sm-5 col-xs-5 title ">Cell Phone:
-              </div>
-              <div class="col-sm-7"><%= @user.cell %><br>
-              </div>
-              <div class="clearfix">
-              </div>
-              <div class="bot-border">
-              </div>
-              <div class="col-sm-5 col-xs-5 title ">Email:
-              </div>
-              <div class="col-sm-7"><%= @user.email %><br>
-              </div>
-              <div class="clearfix">
-              </div>
-              <div class="bot-border">
-              </div>
-              <div class="col-sm-5 col-xs-5 title ">City:
-              </div>
-
-              <% if current_user.usertype_id == 1 %>
-                  <div class="col-sm-7"><%= @user.city %><br>
-                  </div>
-                  <div class="clearfix">
-                  </div>
-                  <div class="col-sm-5 col-xs-5 title ">Street address:
-                  </div>
-                  <div class="col-sm-7"><%= @user.street_address %><br>
-                  </div>
-                  <div class="clearfix">
-                  </div>
-                  <div class="bot-border">
-                  </div>
-                  <div class="col-sm-5 col-xs-5 title ">Province:
-                  </div>
-                  <div class="col-sm-7"><%= @user.province %><br>
-                  </div>
-                  <div class="clearfix">
-                  </div>
-                  <div class="bot-border">
-                  </div>
-                  <div class="col-sm-5 col-xs-5 title ">Postal code:
-                  </div>
-              <% end %>
-              <div class="col-sm-7"><%= @user.postal_code %><br>
-              </div>
-              <div class="clearfix">
-              </div>
-              <div class="bot-border">
-              </div>
-            </div>
-          </div>
         </div>
+    <% end %>
+
+    <hr>
+
+    <!-- Button shows/hides all reviews -->
+    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+      See reviews
+    </button>
+    <div class="collapse" id="collapseExample">
+      <div class="well">
+        <table class="table">
+          <thead>
+          <th>Content</th>
+          <th>Rating</th>
+          </thead>
+          <tbody>
+          <% @user.reviews_by.reverse_each do |item| %>
+              <tr>
+                <td><%= item.comment %></td>
+                <td><%= item.rating %></td>
+              </tr>
+          <% end %>
+          </tbody>
+        </table>
       </div>
     </div>
+
+    <hr>
+
+    <!-- Shows a button to 'worker' users, allowing that user to add experience -->
+    <% if current_user.usertype_id == 2 %>
+        <!--<= link_to "Add experience", %>-->
+    <% end %>
+
+    <hr>
+
   </div>
 </div>
-<script>
-  $(function () {
-    $('#profile-image1').on('click', function () {
-      $('#profile-image-upload').click();
-    });
-  });
-</script>
-
-<!-- Shows a button to 'worker' users, allowing that user to add experience -->
-<% if current_user.usertype_id == 2 %>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2 ">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <%= link_to link_to "Add experience", controller: "experiences", action: "new" %>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-<% end %>
-
-<!-- Renders each instance of 'experience' added by a 'worker' user -->
-<% @user.experiences.each do |e| %>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-7 ">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <div>
-                <h5>
-                  <%= e.jobtype.name.capitalize %>
-                </h5>
-              </div>
-            </div>
-            <div class="panel-body">
-              <div class="box box-info">
-                <div class="box-body">
-                  <div class="col-sm-14">
-                    <div align="center">
-                      <div class="col-sm-5 col-xs-6 title ">Employer:
-                      </div>
-                      <div class="col-xs-5 col-sm-7"><%= e.employer_name %>
-                      </div>
-                      <div class="clearfix">
-                      </div>
-                      <div class="bot-border">
-                      </div>
-                      <div class="col-sm-5 col-xs-6 title ">Month(s):
-                      </div>
-                      <div class="col-sm-7"><%= e.months %>
-                      </div>
-                      <div class="clearfix">
-                      </div>
-                      <div class="bot-border">
-                      </div>
-                      <div class="col-sm-5 col-xs-6 title ">Description:
-                      </div>
-                      <div class="col-sm-7"><%= e.description %>
-                      </div>
-                      <div class="clearfix">
-                      </div>
-                      <div class="bot-border">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-<% end %>
