Added tokens to secrets. Styled jobs cards, application table, search bar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,10 @@ body {
 
 }
 
+a{
+  color: #000000;
+}
+
 .homepage-bg {
   background: url('home2.jpeg') no-repeat center center fixed;
   -webkit-background-size: cover;
